login and register

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 ATLAS_URI=mongodb+srv://umutimamoglu:zeynep6192002@cluster2.v37mexh.mongodb.net/chatApp?retryWrites=true&w=majority&appName=Cluster2
+JWT_SECRET_KEY = supersecrekey112233445566
